# pacman

./: .gitignore  1betinput.h  1bitinput.cpp  CMakeLists.txt  README.md  c.sh  client.cpp  erproc.c  erproc.h  main.cpp  rendering.cpp  rendering.h  settings.cpp  settings.h  t.sh
.github/: build
.github/workflows/: release.yml
